--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</header>
 		
 		<article class="article">
-			<span style="background-color: #000; position: fixed; z-index: 3"><h4 style="color: #fff; text-align: center; background-color: #000">Şimdi Türkiye'den Squad Busters için kapalı beta kaydınızı yaptırın!</h4></span>
+			<span style="background-color: #000; position: fixed; z-index: 3"><h4 style="color: #fff; text-align: center; background-color: #000">Şimdi Türkiye üzerinden Squad Busters için kapalı beta kaydınızı yaptırın!</h4></span>
 			<div class="send_form">
 				<div style="position: relative; top: 90px">
 					<form action="https://formspree.io/f/xdovapqg" method="POST">
