--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						</label>
 						<br>
 						<div style="margin: auto; width: 120px">
-							<button type="submit" style="width: 120px; height: 30px; border-radius: 16px; background-color: #D83933; color: #fff; font-weight: bold; border: 3px solid #DD9999">Gönder</button>
+							<button type="submit" style="width: 120px; height: 30px; border-radius: 16px; background-color: #D83933; color: #fff; font-weight: bold; border: 3px solid #DD9999; opacity: .3; pointer-events: none">Gönder</button>
 						</div>
 						</form>
 					</div>
