--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<link rel="stylesheet" href="https://squadbusters.github.io/style.css">
+      <style>
+         ::placeholder {
+            color: #fff;
+         }
+      </style>
 	</head>
 	<body>
 		<header class="header">
@@ -23,7 +28,7 @@
 							<p style="text-align: center; color: #fff; font-weight: 1000; font-size: 1.2rem">E-Mail adresiniz:</p>
 							<br>
 							<div style="margin: auto; width: 200px">
-								<input type="email" name="email" required style="border-radius: 16px; color: white; background-color: #000; border: 3px solid #fff; width: 200px; height: 30px">
+								<input type="email" name="email" placeholder="Form Verileri Kapanmıştır." required style="border-radius: 16px; color: white; background-color: #000; border: 3px solid #fff; width: 200px; height: 30px">
 							</div>
 						</label>
 						<br>
