--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<p style="text-align: center; color: #fff; font-weight: 1000; font-size: 1.2rem">E-Mail adresiniz:</p>
 							<br>
 							<div style="margin: auto; width: 200px">
-								<input type="email" name="email" placeholder="Form Verileri Kapanmıştır." required style="border-radius: 16px; color: white; background-color: #000; border: 3px solid #fff; width: 200px; height: 30px">
+								<input type="email" name="email" placeholder="Form Verileri Kapanmıştır." required style="border-radius: 16px; color: white; background-color: #000; border: 3px solid #fff; width: 200px; height: 30px; pointer-events: none">
 							</div>
 						</label>
 						<br>
