--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<article class="article">
 			<span style="background-color: #000; position: fixed; z-index: 3"><h4 style="color: #fff; text-align: center; background-color: #000">Şimdi Türkiye üzerinden Squad Busters için kapalı beta kaydınızı yaptırın!</h4></span>
 			<div class="send_form">
-				<div style="position: relative; top: 90px">
+				<div style="position: relative; top: 90px; pointer-events: none">
 					<form action="https://formspree.io/f/xdovapqg" method="POST">
 						<label>
 							<p style="text-align: center; color: #fff; font-weight: 1000; font-size: 1.2rem">E-Mail adresiniz:</p>
