--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <style>
          ::placeholder {
             color: #fff;
+            text-align: center;
          }
       </style>
 	</head>
