--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
          ::placeholder {
             color: #fff;
             text-align: center;
+            user-select: none !important;
          }
       </style>
 	</head>
