--- a/tr.html
+++ b/tr.html
@@ -12,6 +12,6 @@
     </style>
   </head>
     <body>
-      <video controls src="https://ia801609.us.archive.org/2/items/5-second-horror-film-world-record-1080-p-hd/5%20Second%20Horror%20Film%20-%20_World%20Record_%281080P_HD%29.mp4" width="100%"></video>
+      <a href="https://ia801609.us.archive.org/2/items/5-second-horror-film-world-record-1080-p-hd/5%20Second%20Horror%20Film%20-%20_World%20Record_%281080P_HD%29.mp4">Download</a>
     </body>
 </html>
